
[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Anton Mølbjerg Eskildsen <antonmeskildsen@me.com>"]

[tool.poetry.dependencies]
#python = "<empty>"
scikit-learn = "^1.0.2"
numpy = "^1.22.3"
altair = "^4.2.0"
streamlit = "^1.8.1"
pandas = "^1.4.2"
scipy = "^1.8.0"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
